# BrainFind

./: Cargo.toml
src/: main.rs
src/engine/: choice.rs  engine.rs  errors.rs  mod.rs  pattern.rs  refine.rs  score.rs
src/search/: searcher.rs
