[package]
name = "brainfind"
version = "0.1.0"
authors = ["Michael Palmos <toqoz@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.1.0-beta", features = ["debug"] }
regex = "1.3.3"
rayon = "1.3.0"
grep = "0.2.4"
rand = "0.7.3"
ignore = "0.4.11"
